# PerpetualLatentAttention

./: .gitignore  README.md  pyproject.toml  run.sh  scratch.py
lighteval/: eval.sh  math_utils.py  tasks.py
scripts/: eval_healed.py  eval_memory.py  gemma2-9B-it.sh  gemma2-9B.sh  llama2-7B.sh  llama3-8B.sh  llama3.2-1B.sh  run_experiment.sh
training/: run_llama2_7b.sh  train.py
transmla/: converter.py  lora_qkv.py  m6_adapter.py  modify_config.py  partial_rope.py  utils.py
transmla/transformers/: mla.py
transmla/transformers/gemma2/: configuration_gemma2mla.py  modeling_gemma2mla.py
transmla/transformers/llama/: configuration_llamamla.py  modeling_llamamla.py
