[project]
name = "perpetual-latent-attention"
version = "0.1.0"
description = "Migrating GQA Models to MLA with Full Compatibility and Speedup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm==0.19.0",
    "torch>=2.8.0",
    "transformers",
    "hf-transfer",
    "deepspeed",
    "datasets",
    "accelerate",
    "lighteval[vllm]"
]
